--- a/components/LocationsPanel/LocationsPanel.module.scss
+++ b/components/LocationsPanel/LocationsPanel.module.scss
@@ -56,14 +56,14 @@
 	border-radius: 50%;
 	width: 30px;
 	height: 30px;
-	background-color: red;
+	background-color: $red;
 }
 
 .green {
 	border-radius: 50%;
 	width: 30px;
 	height: 30px;
-	background-color: green;
+	background-color: $green;
 }
 
 .status {
