--- a/components/LocationsPanel/LocationsPanel.module.scss
+++ b/components/LocationsPanel/LocationsPanel.module.scss
@@ -15,9 +15,9 @@
 
 .section {
   background: $background-light-color;
-  border-radius: 1em;
+  border-radius: 11px;
   padding: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
 }
 
 
@@ -34,6 +34,8 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
   @include animate(background);
 
   &:hover {
@@ -53,17 +55,21 @@
 }
 
 .red {
-	border-radius: 50%;
-	width: 30px;
-	height: 30px;
 	background-color: $red;
 }
 
 .green {
-	border-radius: 50%;
-	width: 30px;
-	height: 30px;
 	background-color: $green;
+}
+
+.red,
+.green {
+  // border-radius: 0 50% 50% 0;
+  width: 11px;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .status {
