--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: 'Inter', sans-serif;
+  font-size: 1em;
+  line-height: 1.5;
+}
+
+h1 {
+  font-size: 1.5em;
+  line-height: 1.5;
 }
 
 a {
