--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,13 @@ h1 {
   line-height: 1.5;
 }
 
+h4 {
+  font-weight: 600;
+  font-size: 1.1em;
+  line-height: 1.4;
+  margin: .7em 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
