--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,20 +1,20 @@
 @mixin animate($property...) {
   transition-property: $property;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
 }
 
 @mixin animate-fast($property...) {
   transition-property: $property;
-  transition-duration: .15s;
+  transition-duration: 0.15s;
   transition-timing-function: ease-in-out;
 }
 
-$background-color: #1F1D2B;
+$background-color: #1f1d2b;
 $background-light-color: #252836;
-$white80: #D2D2D5;
-$white: #FFFFFF;
-$accent: #9494FB;
-$green: #1CBC6F;
-$orange: #FF8700;
-$red: #B42809;
+$white80: #d2d2d5;
+$white: #ffffff;
+$accent: #9494fb;
+$green: #1cbc6f;
+$orange: #ff8700;
+$red: #b42809;
