--- a/components/LocationsPanel/Details/Details.module.scss
+++ b/components/LocationsPanel/Details/Details.module.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.title {
+  margin: .3em 0;
+}
+
 .tabs {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -35,5 +39,5 @@
 }
 
 .content {
-  padding-top: 1.5em;
+  padding-top: .5em;
 }
